Minor bugs fix, add comments
